[GEOPY-1712] Exclude RUFF005

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -124,7 +124,8 @@ select = [
     "E",  # pycodestyle errors
     "F",  # pyflakes
     "I",  # isort
-    "RUF",  # ruff rules
+    "RUF",  # ruff rules,
+    "RUF005",  # collection-literal-concatenation - wrong suggestion with numpy arrays
     "TID", # flake8-tidy-imports
     "UP",  # pyupgrade
     "W",  # pycodestyle warnings
