--- a/environments/py-3.10-linux-64-dev.conda.lock.yml
+++ b/environments/py-3.10-linux-64-dev.conda.lock.yml
@@ -10,12 +10,12 @@ dependencies:
   - accessible-pygments=0.0.5=pyhd8ed1ab_0
   - alabaster=0.7.16=pyhd8ed1ab_0
   - annotated-types=0.7.0=pyhd8ed1ab_0
-  - anyio=4.4.0=pyhd8ed1ab_0
+  - anyio=4.6.0=pyhd8ed1ab_1
   - argon2-cffi=23.1.0=pyhd8ed1ab_0
   - argon2-cffi-bindings=21.2.0=py310ha75aee5_5
   - arrow=1.3.0=pyhd8ed1ab_0
   - asciitree=0.3.3=py_2
-  - astroid=3.2.4=py310hff52083_0
+  - astroid=3.3.3=py310hff52083_0
   - asttokens=2.4.1=pyhd8ed1ab_0
   - async-lru=2.0.4=pyhd8ed1ab_0
   - attrs=24.2.0=pyh71513ae_0
@@ -60,7 +60,7 @@ dependencies:
   - freetype=2.12.1=h267a509_2
   - fsspec=2022.11.0=pyhd8ed1ab_0
   - geoana=0.5.0=py310hcb52e73_4
-  - greenlet=3.1.0=py310hf71b8c6_2
+  - greenlet=3.1.1=py310hf71b8c6_0
   - h11=0.14.0=pyhd8ed1ab_0
   - h2=4.1.0=pyhd8ed1ab_0
   - h5py=3.11.0=nompi_py310hf054cd7_102
@@ -108,7 +108,7 @@ dependencies:
   - krb5=1.21.3=h659f571_0
   - latexcodec=2.0.1=pyh9f0ad1d_0
   - lcms2=2.16=hb7c19ff_0
-  - ld_impl_linux-64=2.40=hf3520f5_7
+  - ld_impl_linux-64=2.43=h712a8e2_0
   - lerc=4.0.0=h27087fc_0
   - libaec=1.1.3=h59595ed_0
   - libblas=3.9.0=20_linux64_mkl
@@ -116,7 +116,7 @@ dependencies:
   - libbrotlidec=1.1.0=hb9d3cd8_2
   - libbrotlienc=1.1.0=hb9d3cd8_2
   - libcblas=3.9.0=20_linux64_mkl
-  - libcurl=8.10.0=hbbe4b11_0
+  - libcurl=8.10.1=hbbe4b11_0
   - libdeflate=1.21=h4bc722e_0
   - libdlf=0.2.0=pyhd8ed1ab_0
   - libedit=3.1.20191231=he28a2e2_2
@@ -140,7 +140,7 @@ dependencies:
   - libssh2=1.11.0=h0841786_0
   - libstdcxx=14.1.0=hc0a3c3a_1
   - libstdcxx-ng=14.1.0=h4852527_1
-  - libtiff=4.6.0=h46a8edc_4
+  - libtiff=4.7.0=h6565414_0
   - libuuid=2.38.1=h0b41bf4_0
   - libwebp-base=1.4.0=hd590300_0
   - libxcb=1.16=hb9d3cd8_1
@@ -180,7 +180,7 @@ dependencies:
   - openssl=3.3.2=hb9d3cd8_0
   - overrides=7.7.0=pyhd8ed1ab_0
   - packaging=24.1=pyhd8ed1ab_0
-  - pandas=2.2.2=py310hf9f9076_1
+  - pandas=2.2.3=py310h5eaa309_1
   - pandoc=3.4=ha770c72_0
   - pandocfilters=1.5.0=pyhd8ed1ab_0
   - parso=0.8.4=pyhd8ed1ab_0
@@ -192,10 +192,10 @@ dependencies:
   - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
   - platformdirs=4.3.6=pyhd8ed1ab_0
   - pluggy=1.5.0=pyhd8ed1ab_0
-  - prometheus_client=0.20.0=pyhd8ed1ab_0
+  - prometheus_client=0.21.0=pyhd8ed1ab_0
   - prompt-toolkit=3.0.47=pyha770c72_0
   - psutil=6.0.0=py310ha75aee5_1
-  - pthread-stubs=0.4=h36c2ea0_1001
+  - pthread-stubs=0.4=hb9d3cd8_1002
   - ptyprocess=0.7.0=pyhd3deb0d_0
   - pure_eval=0.2.3=pyhd8ed1ab_0
   - pybtex=0.24.0=pyhd8ed1ab_2
@@ -206,20 +206,20 @@ dependencies:
   - pydata-sphinx-theme=0.15.4=pyhd8ed1ab_0
   - pydiso=0.0.5=py310h4fb8009_1
   - pygments=2.18.0=pyhd8ed1ab_0
-  - pylint=3.2.7=pyhd8ed1ab_0
+  - pylint=3.3.0=pyhd8ed1ab_0
   - pymatsolver=0.2.0=ha770c72_3
   - pymatsolver-base=0.2.0=pyh44b312d_3
   - pyparsing=3.1.4=pyhd8ed1ab_0
   - pysocks=1.7.1=pyha2e5f31_6
   - pytest=8.3.3=pyhd8ed1ab_0
   - pytest-cov=5.0.0=pyhd8ed1ab_0
-  - python=3.10.14=hd12c33a_0_cpython
+  - python=3.10.15=h4a871b0_0_cpython
   - python-dateutil=2.9.0=pyhd8ed1ab_0
   - python-fastjsonschema=2.20.0=pyhd8ed1ab_0
   - python-json-logger=2.0.7=pyhd8ed1ab_0
   - python-tzdata=2023.4=pyhd8ed1ab_0
   - python_abi=3.10=5_cp310
-  - pytz=2024.2=pyhd8ed1ab_0
+  - pytz=2024.1=pyhd8ed1ab_0
   - pyyaml=6.0.2=py310ha75aee5_1
   - pyzmq=26.2.0=py310h71f11fc_2
   - readline=8.2=h8228510_1
@@ -232,7 +232,7 @@ dependencies:
   - scikit-learn=1.4.2=py310h981052a_1
   - scipy=1.14.1=py310ha3fb0e1_0
   - send2trash=1.8.3=pyh0d859eb_0
-  - setuptools=73.0.1=pyhd8ed1ab_0
+  - setuptools=74.1.2=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
   - sniffio=1.3.1=pyhd8ed1ab_0
   - snowballstemmer=2.2.0=pyhd8ed1ab_0
@@ -286,8 +286,8 @@ dependencies:
   - websocket-client=1.8.0=pyhd8ed1ab_0
   - wheel=0.44.0=pyhd8ed1ab_0
   - widgetsnbextension=3.6.9=pyhd8ed1ab_0
-  - xorg-libxau=1.0.11=hd590300_0
-  - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xorg-libxau=1.0.11=hb9d3cd8_1
+  - xorg-libxdmcp=1.1.3=hb9d3cd8_1
   - xz=5.2.6=h166bdaf_0
   - yaml=0.2.5=h7f98852_2
   - zarr=2.14.2=pyhd8ed1ab_0
@@ -297,11 +297,11 @@ dependencies:
   - zstandard=0.23.0=py310ha39cb0e_1
   - zstd=1.5.6=ha6fb4c9_0
   - pip:
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils@4bc408affcf5ad5e8539014f229c1a36c6a66698
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@bbb053ac88e1f04c4a98501c215c9d4aec82817a
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg@ca62fe25606824677fcde9111d48c0fffcb6ef1c
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app@d61e0b3658861e6dc1f402531a2bd256f38df1d4
-      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps@ec6a4381a2148e941499c006d885e39989055004
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils@8726c9a369a76235db07363f035cbdd669629a37
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@f519d1de69dca99619161d2c31c3fdec6dc63387
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg@221af823edc47e5b96cff3a6c07e5bb8e59cbaa9
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app@c3ae5ea68e7e517c0ac33efdf58f27380aec3b7c
+      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps@e3be50dd098fe1d72d666704cbe65611386c8f23
 
 variables:
   KMP_WARNINGS: 0
