--- a/environments/py-3.10-linux-64-dev.conda.lock.yml
+++ b/environments/py-3.10-linux-64-dev.conda.lock.yml
@@ -15,7 +15,7 @@ dependencies:
   - argon2-cffi-bindings=21.2.0=py310ha75aee5_5
   - arrow=1.3.0=pyhd8ed1ab_0
   - asciitree=0.3.3=py_2
-  - astroid=3.3.3=py310hff52083_0
+  - astroid=3.3.4=py310hff52083_0
   - asttokens=2.4.1=pyhd8ed1ab_0
   - async-lru=2.0.4=pyhd8ed1ab_0
   - attrs=24.2.0=pyh71513ae_0
@@ -37,13 +37,13 @@ dependencies:
   - cloudpickle=3.0.0=pyhd8ed1ab_0
   - colorama=0.4.6=pyhd8ed1ab_0
   - comm=0.2.2=pyhd8ed1ab_0
-  - contourpy=1.3.0=py310h3788b33_1
+  - contourpy=1.3.0=py310h3788b33_2
   - coverage=7.6.1=py310ha75aee5_1
   - cycler=0.12.1=pyhd8ed1ab_0
   - cytoolz=0.12.3=py310h2372a71_0
   - dask-core=2024.6.2=pyhd8ed1ab_0
   - dataclasses=0.8=pyhc8e2a94_3
-  - debugpy=1.8.5=py310hf71b8c6_1
+  - debugpy=1.8.6=py310hf71b8c6_0
   - decorator=5.1.1=pyhd8ed1ab_0
   - defusedxml=0.7.1=pyhd8ed1ab_0
   - dill=0.3.8=pyhd8ed1ab_0
@@ -55,7 +55,7 @@ dependencies:
   - exceptiongroup=1.2.2=pyhd8ed1ab_0
   - executing=2.1.0=pyhd8ed1ab_0
   - fasteners=0.17.3=pyhd8ed1ab_0
-  - fonttools=4.54.0=py310ha75aee5_0
+  - fonttools=4.54.1=py310ha75aee5_0
   - fqdn=1.5.1=pyhd8ed1ab_0
   - freetype=2.12.1=h267a509_2
   - fsspec=2022.11.0=pyhd8ed1ab_0
@@ -108,7 +108,7 @@ dependencies:
   - krb5=1.21.3=h659f571_0
   - latexcodec=2.0.1=pyh9f0ad1d_0
   - lcms2=2.16=hb7c19ff_0
-  - ld_impl_linux-64=2.43=h712a8e2_0
+  - ld_impl_linux-64=2.43=h712a8e2_1
   - lerc=4.0.0=h27087fc_0
   - libaec=1.1.3=h59595ed_0
   - libblas=3.9.0=20_linux64_mkl
@@ -143,7 +143,7 @@ dependencies:
   - libtiff=4.7.0=h6565414_0
   - libuuid=2.38.1=h0b41bf4_0
   - libwebp-base=1.4.0=hd590300_0
-  - libxcb=1.16=hb9d3cd8_1
+  - libxcb=1.17.0=h8a09558_0
   - libxcrypt=4.4.36=hd590300_1
   - libxml2=2.12.7=he7c6b58_4
   - libzlib=1.3.1=h4ab18f5_1
@@ -193,7 +193,7 @@ dependencies:
   - platformdirs=4.3.6=pyhd8ed1ab_0
   - pluggy=1.5.0=pyhd8ed1ab_0
   - prometheus_client=0.21.0=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.47=pyha770c72_0
+  - prompt-toolkit=3.0.48=pyha770c72_0
   - psutil=6.0.0=py310ha75aee5_1
   - pthread-stubs=0.4=hb9d3cd8_1002
   - ptyprocess=0.7.0=pyhd3deb0d_0
@@ -206,7 +206,7 @@ dependencies:
   - pydata-sphinx-theme=0.15.4=pyhd8ed1ab_0
   - pydiso=0.0.5=py310h4fb8009_1
   - pygments=2.18.0=pyhd8ed1ab_0
-  - pylint=3.3.0=pyhd8ed1ab_0
+  - pylint=3.3.1=pyhd8ed1ab_0
   - pymatsolver=0.2.0=ha770c72_3
   - pymatsolver-base=0.2.0=pyh44b312d_3
   - pyparsing=3.1.4=pyhd8ed1ab_0
@@ -232,7 +232,7 @@ dependencies:
   - scikit-learn=1.4.2=py310h981052a_1
   - scipy=1.14.1=py310ha3fb0e1_0
   - send2trash=1.8.3=pyh0d859eb_0
-  - setuptools=74.1.2=pyhd8ed1ab_0
+  - setuptools=75.1.0=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
   - sniffio=1.3.1=pyhd8ed1ab_0
   - snowballstemmer=2.2.0=pyhd8ed1ab_0
@@ -298,8 +298,8 @@ dependencies:
   - zstd=1.5.6=ha6fb4c9_0
   - pip:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils@8726c9a369a76235db07363f035cbdd669629a37
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@f519d1de69dca99619161d2c31c3fdec6dc63387
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg@e02d6313a17a22e63a02b542c06de52358ede830
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@1d057e0dd3c7cec71e2d39e4f0a6283f12ef140c
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg@e4effeea85a290af87d1f1deaf204a47894cff10
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app@c3ae5ea68e7e517c0ac33efdf58f27380aec3b7c
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps@e3be50dd098fe1d72d666704cbe65611386c8f23
 
