--- a/environments/py-3.10-win-64-dev.conda.lock.yml
+++ b/environments/py-3.10-win-64-dev.conda.lock.yml
@@ -36,7 +36,7 @@ dependencies:
   - comm=0.2.2=pyhd8ed1ab_0
   - contourpy=1.3.0=py310hc19bc0b_2
   - coverage=7.6.1=py310ha8f682b_1
-  - cpython=3.10.15=py310hd8ed1ab_0
+  - cpython=3.10.15=py310hd8ed1ab_1
   - cycler=0.12.1=pyhd8ed1ab_0
   - cytoolz=0.12.3=py310h8d17308_0
   - dask-core=2024.6.2=pyhd8ed1ab_0
@@ -44,7 +44,7 @@ dependencies:
   - debugpy=1.8.6=py310h9e98ed7_0
   - decorator=5.1.1=pyhd8ed1ab_0
   - defusedxml=0.7.1=pyhd8ed1ab_0
-  - dill=0.3.8=pyhd8ed1ab_0
+  - dill=0.3.9=pyhd8ed1ab_0
   - discretize=0.10.0=py310h4856b71_1
   - distributed=2024.6.2=pyhd8ed1ab_0
   - docutils=0.18.1=py310h5588dad_1
@@ -64,7 +64,7 @@ dependencies:
   - h5py=3.11.0=nompi_py310h2b0be38_102
   - hdf5=1.14.3=nompi_h2b43c12_105
   - hpack=4.0.0=pyh9f0ad1d_0
-  - httpcore=1.0.5=pyhd8ed1ab_0
+  - httpcore=1.0.6=pyhd8ed1ab_0
   - httpx=0.27.2=pyhd8ed1ab_0
   - hyperframe=6.0.1=pyhd8ed1ab_0
   - idna=3.10=pyhd8ed1ab_0
@@ -75,7 +75,7 @@ dependencies:
   - iniconfig=2.0.0=pyhd8ed1ab_0
   - intel-openmp=2023.2.0=h57928b3_50497
   - ipykernel=6.29.5=pyh4bbf305_0
-  - ipython=8.27.0=pyh7428d3b_0
+  - ipython=8.28.0=pyh7428d3b_0
   - ipython_genutils=0.2.0=pyhd8ed1ab_1
   - ipywidgets=7.8.4=pyhd8ed1ab_0
   - isoduration=20.11.0=pyhd8ed1ab_0
@@ -128,7 +128,7 @@ dependencies:
   - libwebp-base=1.4.0=hcfcfb64_0
   - libxcb=1.16=h013a479_1
   - libxml2=2.12.7=h0f24e4e_4
-  - libzlib=1.3.1=h2466b09_1
+  - libzlib=1.3.1=h2466b09_2
   - linkify-it-py=2.0.3=pyhd8ed1ab_0
   - llvmlite=0.43.0=py310h0288bfe_1
   - locket=1.0.0=pyhd8ed1ab_0
@@ -198,7 +198,7 @@ dependencies:
   - pysocks=1.7.1=pyh0701188_6
   - pytest=8.3.3=pyhd8ed1ab_0
   - pytest-cov=5.0.0=pyhd8ed1ab_0
-  - python=3.10.15=hfaddaf0_0_cpython
+  - python=3.10.15=hfaddaf0_1_cpython
   - python-dateutil=2.9.0=pyhd8ed1ab_0
   - python-fastjsonschema=2.20.0=pyhd8ed1ab_0
   - python-json-logger=2.0.7=pyhd8ed1ab_0
@@ -251,13 +251,13 @@ dependencies:
   - tinycss2=1.3.0=pyhd8ed1ab_0
   - tk=8.6.13=h5226925_1
   - toml=0.10.2=pyhd8ed1ab_0
-  - tomli=2.0.1=pyhd8ed1ab_0
+  - tomli=2.0.2=pyhd8ed1ab_0
   - tomlkit=0.13.2=pyha770c72_0
   - toolz=0.12.1=pyhd8ed1ab_0
   - tornado=6.4.1=py310ha8f682b_1
   - tqdm=4.66.5=pyhd8ed1ab_0
   - traitlets=5.14.3=pyhd8ed1ab_0
-  - types-python-dateutil=2.9.0.20240906=pyhd8ed1ab_0
+  - types-python-dateutil=2.9.0.20241003=pyhff2d567_0
   - typing-extensions=4.12.2=hd8ed1ab_0
   - typing_extensions=4.12.2=pyha770c72_0
   - typing_utils=0.1.0=pyhd8ed1ab_0
@@ -276,14 +276,10 @@ dependencies:
   - websocket-client=1.8.0=pyhd8ed1ab_0
   - wheel=0.44.0=pyhd8ed1ab_0
   - widgetsnbextension=3.6.9=pyhd8ed1ab_0
-  - win_inet_pton=1.1.0=pyhd8ed1ab_6
+  - win_inet_pton=1.1.0=pyh7428d3b_7
   - winpty=0.4.3=4
-  - xorg-kbproto=1.0.7=hcd874cb_1002
-  - xorg-libx11=1.8.9=h0076a8d_1
   - xorg-libxau=1.0.11=hcd874cb_0
   - xorg-libxdmcp=1.1.3=hcd874cb_0
-  - xorg-xextproto=7.3.0=hcd874cb_1003
-  - xorg-xproto=7.0.31=hcd874cb_1007
   - xz=5.2.6=h8d14728_0
   - yaml=0.2.5=h8ffe710_2
   - zarr=2.14.2=pyhd8ed1ab_0
@@ -293,11 +289,11 @@ dependencies:
   - zstandard=0.23.0=py310he5e10e1_1
   - zstd=1.5.6=h0ea2cb4_0
   - pip:
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils@8726c9a369a76235db07363f035cbdd669629a37
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@1d057e0dd3c7cec71e2d39e4f0a6283f12ef140c
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils@693a3f3f2521b10997abf9d4796ea5bbbd54acff
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@21baa0d322155ea99918df3f089a658414e690be
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg@e4effeea85a290af87d1f1deaf204a47894cff10
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app@c3ae5ea68e7e517c0ac33efdf58f27380aec3b7c
-      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps@e3be50dd098fe1d72d666704cbe65611386c8f23
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app@3a1e73a4a657335496b116a690fac6884019f13b
+      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps@1ad6378120dde7c075cf989283e6a977800d2158
 
 variables:
   KMP_WARNINGS: 0
