--- a/environments/py-3.10-linux-64-dev.conda.lock.yml
+++ b/environments/py-3.10-linux-64-dev.conda.lock.yml
@@ -46,7 +46,7 @@ dependencies:
   - debugpy=1.8.6=py310hf71b8c6_0
   - decorator=5.1.1=pyhd8ed1ab_0
   - defusedxml=0.7.1=pyhd8ed1ab_0
-  - dill=0.3.8=pyhd8ed1ab_0
+  - dill=0.3.9=pyhd8ed1ab_0
   - discretize=0.10.0=py310hcb52e73_1
   - distributed=2024.6.2=pyhd8ed1ab_0
   - docutils=0.18.1=py310hff52083_1
@@ -66,7 +66,7 @@ dependencies:
   - h5py=3.11.0=nompi_py310hf054cd7_102
   - hdf5=1.14.3=nompi_hdf9ad27_105
   - hpack=4.0.0=pyh9f0ad1d_0
-  - httpcore=1.0.5=pyhd8ed1ab_0
+  - httpcore=1.0.6=pyhd8ed1ab_0
   - httpx=0.27.2=pyhd8ed1ab_0
   - hyperframe=6.0.1=pyhd8ed1ab_0
   - icu=75.1=he02047a_0
@@ -77,7 +77,7 @@ dependencies:
   - importlib_resources=6.4.5=pyhd8ed1ab_0
   - iniconfig=2.0.0=pyhd8ed1ab_0
   - ipykernel=6.29.5=pyh3099207_0
-  - ipython=8.27.0=pyh707e725_0
+  - ipython=8.28.0=pyh707e725_0
   - ipython_genutils=0.2.0=pyhd8ed1ab_1
   - ipywidgets=7.8.4=pyhd8ed1ab_0
   - isoduration=20.11.0=pyhd8ed1ab_0
@@ -146,9 +146,9 @@ dependencies:
   - libxcb=1.17.0=h8a09558_0
   - libxcrypt=4.4.36=hd590300_1
   - libxml2=2.12.7=he7c6b58_4
-  - libzlib=1.3.1=h4ab18f5_1
+  - libzlib=1.3.1=hb9d3cd8_2
   - linkify-it-py=2.0.3=pyhd8ed1ab_0
-  - llvm-openmp=18.1.8=hf5423f3_1
+  - llvm-openmp=19.1.0=h84d6215_0
   - llvmlite=0.43.0=py310h1a6248f_1
   - locket=1.0.0=pyhd8ed1ab_0
   - markdown-it-py=2.2.0=pyhd8ed1ab_0
@@ -213,7 +213,7 @@ dependencies:
   - pysocks=1.7.1=pyha2e5f31_6
   - pytest=8.3.3=pyhd8ed1ab_0
   - pytest-cov=5.0.0=pyhd8ed1ab_0
-  - python=3.10.15=h4a871b0_0_cpython
+  - python=3.10.15=h4a871b0_1_cpython
   - python-dateutil=2.9.0=pyhd8ed1ab_0
   - python-fastjsonschema=2.20.0=pyhd8ed1ab_0
   - python-json-logger=2.0.7=pyhd8ed1ab_0
@@ -265,13 +265,13 @@ dependencies:
   - tinycss2=1.3.0=pyhd8ed1ab_0
   - tk=8.6.13=noxft_h4845f30_101
   - toml=0.10.2=pyhd8ed1ab_0
-  - tomli=2.0.1=pyhd8ed1ab_0
+  - tomli=2.0.2=pyhd8ed1ab_0
   - tomlkit=0.13.2=pyha770c72_0
   - toolz=0.12.1=pyhd8ed1ab_0
   - tornado=6.4.1=py310ha75aee5_1
   - tqdm=4.66.5=pyhd8ed1ab_0
   - traitlets=5.14.3=pyhd8ed1ab_0
-  - types-python-dateutil=2.9.0.20240906=pyhd8ed1ab_0
+  - types-python-dateutil=2.9.0.20241003=pyhff2d567_0
   - typing-extensions=4.12.2=hd8ed1ab_0
   - typing_extensions=4.12.2=pyha770c72_0
   - typing_utils=0.1.0=pyhd8ed1ab_0
@@ -287,7 +287,7 @@ dependencies:
   - wheel=0.44.0=pyhd8ed1ab_0
   - widgetsnbextension=3.6.9=pyhd8ed1ab_0
   - xorg-libxau=1.0.11=hb9d3cd8_1
-  - xorg-libxdmcp=1.1.3=hb9d3cd8_1
+  - xorg-libxdmcp=1.1.5=hb9d3cd8_0
   - xz=5.2.6=h166bdaf_0
   - yaml=0.2.5=h7f98852_2
   - zarr=2.14.2=pyhd8ed1ab_0
@@ -297,11 +297,11 @@ dependencies:
   - zstandard=0.23.0=py310ha39cb0e_1
   - zstd=1.5.6=ha6fb4c9_0
   - pip:
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils@8726c9a369a76235db07363f035cbdd669629a37
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@1d057e0dd3c7cec71e2d39e4f0a6283f12ef140c
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils@693a3f3f2521b10997abf9d4796ea5bbbd54acff
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@21baa0d322155ea99918df3f089a658414e690be
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg@e4effeea85a290af87d1f1deaf204a47894cff10
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app@c3ae5ea68e7e517c0ac33efdf58f27380aec3b7c
-      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps@e3be50dd098fe1d72d666704cbe65611386c8f23
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app@3a1e73a4a657335496b116a690fac6884019f13b
+      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps@1ad6378120dde7c075cf989283e6a977800d2158
 
 variables:
   KMP_WARNINGS: 0
