--- a/environments/py-3.10-linux-64.conda.lock.yml
+++ b/environments/py-3.10-linux-64.conda.lock.yml
@@ -24,7 +24,7 @@ dependencies:
   - colorama=0.4.6=pyhd8ed1ab_0
   - contourpy=1.3.0=py310h3788b33_2
   - cycler=0.12.1=pyhd8ed1ab_0
-  - cytoolz=1.0.0=py310ha75aee5_0
+  - cytoolz=1.0.0=py310ha75aee5_1
   - dask-core=2024.6.2=pyhd8ed1ab_0
   - discretize=0.10.0=py310hcb52e73_1
   - distributed=2024.6.2=pyhd8ed1ab_0
@@ -86,10 +86,10 @@ dependencies:
   - libxcrypt=4.4.36=hd590300_1
   - libxml2=2.12.7=he7c6b58_4
   - libzlib=1.3.1=hb9d3cd8_2
-  - llvm-openmp=19.1.0=h84d6215_0
+  - llvm-openmp=19.1.0=h024ca30_1
   - llvmlite=0.43.0=py310h1a6248f_1
   - locket=1.0.0=pyhd8ed1ab_0
-  - markupsafe=2.1.5=py310ha75aee5_1
+  - markupsafe=3.0.1=py310h89163eb_1
   - matplotlib-base=3.8.4=py310hef631a5_2
   - mkl=2023.2.0=h84fe81f_50496
   - msgpack-python=1.1.0=py310h3788b33_0
@@ -151,9 +151,9 @@ dependencies:
   - zstd=1.5.6=ha6fb4c9_0
   - pip:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils@9542e371603a7018dcc86e7b5c0de13a48b58f4b
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@9c4dcb1a21fa4c29e00f8c4ff36509104f2ae8b7
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@3a35129784ced0bd8252996d28d3909940abd994
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg@e4effeea85a290af87d1f1deaf204a47894cff10
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app@616c96eb1b8be7f15115bad81b023d176fad8772
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app@5a3295efb4b3d0bf2be9d220c095a7148707b8e8
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps@1ad6378120dde7c075cf989283e6a977800d2158
 
 variables:
