--- a/environments/py-3.10-win-64-dev.conda.lock.yml
+++ b/environments/py-3.10-win-64-dev.conda.lock.yml
@@ -29,7 +29,7 @@ dependencies:
   - cached_property=1.5.2=pyha770c72_1
   - certifi=2024.8.30=pyhd8ed1ab_0
   - cffi=1.17.1=py310ha8f682b_0
-  - charset-normalizer=3.3.2=pyhd8ed1ab_0
+  - charset-normalizer=3.4.0=pyhd8ed1ab_0
   - click=8.1.7=win_pyh7428d3b_0
   - cloudpickle=3.0.0=pyhd8ed1ab_0
   - colorama=0.4.6=pyhd8ed1ab_0
@@ -38,7 +38,7 @@ dependencies:
   - coverage=7.6.1=py310ha8f682b_1
   - cpython=3.10.15=py310hd8ed1ab_1
   - cycler=0.12.1=pyhd8ed1ab_0
-  - cytoolz=1.0.0=py310ha8f682b_0
+  - cytoolz=1.0.0=py310ha8f682b_1
   - dask-core=2024.6.2=pyhd8ed1ab_0
   - dataclasses=0.8=pyhc8e2a94_3
   - debugpy=1.8.6=py310h9e98ed7_0
@@ -86,7 +86,7 @@ dependencies:
   - json5=0.9.25=pyhd8ed1ab_0
   - jsonpointer=3.0.0=py310h5588dad_1
   - jsonschema=4.23.0=pyhd8ed1ab_0
-  - jsonschema-specifications=2023.12.1=pyhd8ed1ab_0
+  - jsonschema-specifications=2024.10.1=pyhd8ed1ab_0
   - jsonschema-with-format-nongpl=4.23.0=hd8ed1ab_0
   - jupyter-book=0.15.1=pyhd8ed1ab_0
   - jupyter-cache=0.6.1=pyhd8ed1ab_0
@@ -138,7 +138,7 @@ dependencies:
   - m2w64-gmp=6.1.0=2
   - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
   - markdown-it-py=2.2.0=pyhd8ed1ab_0
-  - markupsafe=2.1.5=py310ha8f682b_1
+  - markupsafe=3.0.1=py310h38315fa_1
   - matplotlib-base=3.8.4=py310hadb10a8_2
   - matplotlib-inline=0.1.7=pyhd8ed1ab_0
   - mccabe=0.7.0=pyhd8ed1ab_0
@@ -181,7 +181,7 @@ dependencies:
   - prompt-toolkit=3.0.48=pyha770c72_0
   - psutil=6.0.0=py310ha8f682b_1
   - pthread-stubs=0.4=hcd874cb_1001
-  - pthreads-win32=2.9.1=hfa6e2cd_3
+  - pthreads-win32=2.9.1=h2466b09_4
   - pure_eval=0.2.3=pyhd8ed1ab_0
   - pybtex=0.24.0=pyhd8ed1ab_2
   - pybtex-docutils=1.0.3=py310h5588dad_2
@@ -263,13 +263,13 @@ dependencies:
   - typing_utils=0.1.0=pyhd8ed1ab_0
   - tzdata=2024b=hc8b5060_0
   - uc-micro-py=1.0.3=pyhd8ed1ab_0
-  - ucrt=10.0.22621.0=h57928b3_0
+  - ucrt=10.0.22621.0=h57928b3_1
   - unicodedata2=15.1.0=py310h8d17308_0
   - uri-template=1.3.0=pyhd8ed1ab_0
   - urllib3=2.2.3=pyhd8ed1ab_0
-  - vc=14.3=h8a93ad2_21
-  - vc14_runtime=14.40.33810=ha82c5b3_21
-  - vs2015_runtime=14.40.33810=h3bf8584_21
+  - vc=14.3=h8a93ad2_22
+  - vc14_runtime=14.40.33810=hcc2c482_22
+  - vs2015_runtime=14.40.33810=h3bf8584_22
   - wcwidth=0.2.13=pyhd8ed1ab_0
   - webcolors=24.8.0=pyhd8ed1ab_0
   - webencodings=0.5.1=pyhd8ed1ab_2
@@ -283,16 +283,16 @@ dependencies:
   - xz=5.2.6=h8d14728_0
   - yaml=0.2.5=h8ffe710_2
   - zarr=2.14.2=pyhd8ed1ab_0
-  - zeromq=4.3.5=he1f189c_5
+  - zeromq=4.3.5=ha9f60a1_6
   - zict=3.0.0=pyhd8ed1ab_0
   - zipp=3.20.2=pyhd8ed1ab_0
   - zstandard=0.23.0=py310he5e10e1_1
   - zstd=1.5.6=h0ea2cb4_0
   - pip:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils@9542e371603a7018dcc86e7b5c0de13a48b58f4b
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@9c4dcb1a21fa4c29e00f8c4ff36509104f2ae8b7
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@3a35129784ced0bd8252996d28d3909940abd994
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg@e4effeea85a290af87d1f1deaf204a47894cff10
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app@616c96eb1b8be7f15115bad81b023d176fad8772
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app@5a3295efb4b3d0bf2be9d220c095a7148707b8e8
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps@1ad6378120dde7c075cf989283e6a977800d2158
 
 variables:
