--- a/environments/py-3.10-win-64.conda.lock.yml
+++ b/environments/py-3.10-win-64.conda.lock.yml
@@ -21,7 +21,7 @@ dependencies:
   - colorama=0.4.6=pyhd8ed1ab_0
   - contourpy=1.3.0=py310hc19bc0b_2
   - cycler=0.12.1=pyhd8ed1ab_0
-  - cytoolz=1.0.0=py310ha8f682b_0
+  - cytoolz=1.0.0=py310ha8f682b_1
   - dask-core=2024.6.2=pyhd8ed1ab_0
   - discretize=0.10.0=py310h4856b71_1
   - distributed=2024.6.2=pyhd8ed1ab_0
@@ -74,7 +74,7 @@ dependencies:
   - m2w64-gcc-libs-core=5.3.0=7
   - m2w64-gmp=6.1.0=2
   - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
-  - markupsafe=2.1.5=py310ha8f682b_1
+  - markupsafe=3.0.1=py310h38315fa_1
   - matplotlib-base=3.8.4=py310hadb10a8_2
   - mkl=2023.2.0=h6a75c08_50497
   - msgpack-python=1.1.0=py310hc19bc0b_0
@@ -92,7 +92,7 @@ dependencies:
   - pip=24.2=pyh8b19718_1
   - psutil=6.0.0=py310ha8f682b_1
   - pthread-stubs=0.4=hcd874cb_1001
-  - pthreads-win32=2.9.1=hfa6e2cd_3
+  - pthreads-win32=2.9.1=h2466b09_4
   - pycparser=2.22=pyhd8ed1ab_0
   - pydantic=2.9.2=pyhd8ed1ab_0
   - pydantic-core=2.23.4=py310hc226416_0
@@ -122,12 +122,12 @@ dependencies:
   - typing-extensions=4.12.2=hd8ed1ab_0
   - typing_extensions=4.12.2=pyha770c72_0
   - tzdata=2024b=hc8b5060_0
-  - ucrt=10.0.22621.0=h57928b3_0
+  - ucrt=10.0.22621.0=h57928b3_1
   - unicodedata2=15.1.0=py310h8d17308_0
   - urllib3=2.2.3=pyhd8ed1ab_0
-  - vc=14.3=h8a93ad2_21
-  - vc14_runtime=14.40.33810=ha82c5b3_21
-  - vs2015_runtime=14.40.33810=h3bf8584_21
+  - vc=14.3=h8a93ad2_22
+  - vc14_runtime=14.40.33810=hcc2c482_22
+  - vs2015_runtime=14.40.33810=h3bf8584_22
   - wheel=0.44.0=pyhd8ed1ab_0
   - win_inet_pton=1.1.0=pyh7428d3b_7
   - xorg-libxau=1.0.11=hcd874cb_0
@@ -141,9 +141,9 @@ dependencies:
   - zstd=1.5.6=h0ea2cb4_0
   - pip:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils@9542e371603a7018dcc86e7b5c0de13a48b58f4b
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@9c4dcb1a21fa4c29e00f8c4ff36509104f2ae8b7
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@3a35129784ced0bd8252996d28d3909940abd994
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg@e4effeea85a290af87d1f1deaf204a47894cff10
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app@616c96eb1b8be7f15115bad81b023d176fad8772
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app@5a3295efb4b3d0bf2be9d220c095a7148707b8e8
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps@1ad6378120dde7c075cf989283e6a977800d2158
 
 variables:
