--- a/environments/py-3.11-linux-64-dev.conda.lock.yml
+++ b/environments/py-3.11-linux-64-dev.conda.lock.yml
@@ -27,7 +27,7 @@ dependencies:
   - brotli-bin=1.1.0=hb9d3cd8_2
   - brotli-python=1.1.0=py311hfdbb021_2
   - bzip2=1.0.8=h4bc722e_7
-  - c-ares=1.33.1=heb4867d_0
+  - c-ares=1.34.1=heb4867d_0
   - ca-certificates=2024.8.30=hbcca054_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
@@ -39,7 +39,7 @@ dependencies:
   - colorama=0.4.6=pyhd8ed1ab_0
   - comm=0.2.2=pyhd8ed1ab_0
   - contourpy=1.3.0=py311hd18a35c_2
-  - coverage=7.6.1=py311h9ecbd09_1
+  - coverage=7.6.2=py311h9ecbd09_0
   - cycler=0.12.1=pyhd8ed1ab_0
   - cytoolz=1.0.0=py311h9ecbd09_1
   - dask-core=2024.6.2=pyhd8ed1ab_0
@@ -150,7 +150,7 @@ dependencies:
   - libxml2=2.12.7=he7c6b58_4
   - libzlib=1.3.1=hb9d3cd8_2
   - linkify-it-py=2.0.3=pyhd8ed1ab_0
-  - llvm-openmp=19.1.0=h024ca30_1
+  - llvm-openmp=19.1.1=h024ca30_0
   - llvmlite=0.43.0=py311h9c9ff8c_1
   - locket=1.0.0=pyhd8ed1ab_0
   - markdown-it-py=2.2.0=pyhd8ed1ab_0
@@ -176,7 +176,7 @@ dependencies:
   - notebook=7.2.2=pyhd8ed1ab_0
   - notebook-shim=0.2.4=pyhd8ed1ab_0
   - numba=0.60.0=py311h4bc866e_0
-  - numcodecs=0.13.0=py311h044e617_0
+  - numcodecs=0.13.1=py311h7db5c69_0
   - numpy=1.26.4=py311h64a7726_0
   - openjpeg=2.5.2=h488ebb8_0
   - openssl=3.3.2=hb9d3cd8_0
@@ -299,7 +299,7 @@ dependencies:
   - zstd=1.5.6=ha6fb4c9_0
   - pip:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@9542e371603a7018dcc86e7b5c0de13a48b58f4b
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@dcc8c89c553015910eca4f16adaa44b066b495c7
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@c7b8520dda3e023e29a2c5afa5ab18062f5a589f
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@3e62dde93c022c5217851817f639be8a18dfadf5
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@1f471ffba99522a3cdb7422db9aab8ddec752ef1
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@7ffcedc692bea8de4c2c9eca479b50231e2d22bd
