--- a/environments/py-3.11-linux-64-dev.conda.lock.yml
+++ b/environments/py-3.11-linux-64-dev.conda.lock.yml
@@ -134,7 +134,7 @@ dependencies:
   - libjpeg-turbo=3.0.0=hd590300_1
   - liblapack=3.9.0=20_linux64_mkl
   - libllvm14=14.0.6=hcd5def8_4
-  - libnghttp2=1.58.0=h47da74e_1
+  - libnghttp2=1.63.0=h161d5f1_0
   - libnsl=2.0.1=hd590300_0
   - libpng=1.6.44=hadc24fc_0
   - libsodium=1.0.20=h4ab18f5_0
@@ -154,7 +154,7 @@ dependencies:
   - llvmlite=0.43.0=py311h9c9ff8c_1
   - locket=1.0.0=pyhd8ed1ab_0
   - markdown-it-py=2.2.0=pyhd8ed1ab_0
-  - markupsafe=3.0.1=py311h2dc5d0c_1
+  - markupsafe=3.0.2=py311h2dc5d0c_0
   - matplotlib-base=3.8.4=py311ha4ca890_2
   - matplotlib-inline=0.1.7=pyhd8ed1ab_0
   - mccabe=0.7.0=pyhd8ed1ab_0
@@ -232,7 +232,7 @@ dependencies:
   - rfc3986-validator=0.1.1=pyh9f0ad1d_0
   - rpds-py=0.20.0=py311h9e33e62_1
   - scikit-learn=1.4.2=py311he08f58d_1
-  - scipy=1.14.1=py311he1f765f_0
+  - scipy=1.14.1=py311he9a78e4_1
   - send2trash=1.8.3=pyh0d859eb_0
   - setuptools=75.1.0=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
@@ -300,7 +300,7 @@ dependencies:
   - pip:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@ea741c90e542ff8c25175d3e6496eae9474d9bf5
       - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@682271009d7f94a136f082798f52f722d00534d7
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@75da3b3f62ca59c5b87c9739633e2fa68939f99b
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@498069a8f486f9ca418914112220eef0d92084ee
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@d5f7b1bd9335803b4602f95e27a171462e65a955
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@0593ba343681cf2bc7edd2916f2755896899b3fa
 
