--- a/environments/py-3.11-win-64-dev.conda.lock.yml
+++ b/environments/py-3.11-win-64-dev.conda.lock.yml
@@ -54,7 +54,7 @@ dependencies:
   - exceptiongroup=1.2.2=pyhd8ed1ab_0
   - executing=2.1.0=pyhd8ed1ab_0
   - fasteners=0.17.3=pyhd8ed1ab_0
-  - fonttools=4.54.1=py311he736701_0
+  - fonttools=4.54.1=py311h5082efb_1
   - fqdn=1.5.1=pyhd8ed1ab_0
   - freetype=2.12.1=hdaf720e_2
   - fsspec=2022.11.0=pyhd8ed1ab_0
@@ -266,6 +266,7 @@ dependencies:
   - tzdata=2024b=hc8b5060_0
   - uc-micro-py=1.0.3=pyhd8ed1ab_0
   - ucrt=10.0.22621.0=h57928b3_1
+  - unicodedata2=15.1.0=py311ha68e1ae_0
   - uri-template=1.3.0=pyhd8ed1ab_0
   - urllib3=2.2.3=pyhd8ed1ab_0
   - vc=14.3=h8a93ad2_22
@@ -291,8 +292,8 @@ dependencies:
   - zstd=1.5.6=h0ea2cb4_0
   - pip:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@ea741c90e542ff8c25175d3e6496eae9474d9bf5
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@682271009d7f94a136f082798f52f722d00534d7
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@498069a8f486f9ca418914112220eef0d92084ee
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@d5196d4237822961acd874a272796799d83af219
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@016a2268575f0007915e03c4437e6561eb41021a
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@d5f7b1bd9335803b4602f95e27a171462e65a955
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@0593ba343681cf2bc7edd2916f2755896899b3fa
 
