--- a/meta.yaml
+++ b/meta.yaml
@@ -26,11 +26,11 @@ requirements:
     - distributed >=2024.06.*
     - numpy >=1.26.0,<1.27.0
     - scipy >=1.14.0,<1.15.0
-    - geoh5py >=0.10.0a0.dev0,<0.11.0
-    - octree-creation-app >=0.2.0a0.dev0,<0.3.0
-    - geoapps-utils >=0.4.0a0.dev0,<0.5.0
-    - mira-simpeg >=0.21.2.1a0.dev0,<0.22.0
-    - param-sweeps >=0.2.0a0.dev0,<0.2.1
+    - geoh5py >=0.10.0b1,<0.11.0a.dev
+    - octree-creation-app >=0.2.0b1,<0.3.0a.dev
+    - geoapps-utils >=0.4.0b1,<0.5.0a.dev
+    - mira-simpeg >=0.21.2.1b1,<0.22.0a.dev
+    - param-sweeps >=0.2.0b1,<0.2.1a.dev
     - pillow >=10.3.0
     - empymod >=2.2.1,<2.3.0
     - geoana >=0.5.0,<0.6.0
